<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="gridtitleRowModel" type="com.bitsapplication.app.modules.alarmasyrutinas.data.model.GridtitleRowModel"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearCardAlarma"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylelime_200cornerRadius">
        <TextView android:ellipsize="end" android:id="@+id/txtTitle"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@{gridtitleRowModel.txtTitle}"
            style="@style/txtRobotoromansemibold14" tools:text="@string/lbl_tarea"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtTime"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_7pxh"
            android:singleLine="true"
            android:text="@{gridtitleRowModel.txtTime}"
            style="@style/txtRobotoregular36" tools:text="@string/lbl_09_00am"/>
        <LinearLayout android:gravity="end" android:id="@+id/linearDias"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_1">
            <ImageView android:id="@+id/imageGroupTwo"
                android:layout_height="@dimen/_3pxh"
                android:layout_marginEnd="@dimen/_2pxh"
                android:layout_marginStart="@dimen/_14pxh"
                android:layout_width="@dimen/_85pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group2"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group2"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{gridtitleRowModel.txtLanguage}"
                style="@style/txtRobotomedium12" tools:text="@string/msg_d_l_m_m_j"/>
        </LinearLayout>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterialSwitch"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_9pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv" android:layout_width="wrap_content"/>
    </LinearLayout>
</layout>
