<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearDeviceDevicef"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" >
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout_alarmas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar_alarmas"
                    style="@style/txtSolidOutline"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/top_app_bar"
                    app:title="@string/page_tittle_sesion_estudio"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"/>

            </com.google.android.material.appbar.AppBarLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearFocuspicker"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_marginBottom="@dimen/_16pxh"
                android:orientation="vertical"
                style="@style/groupStyledeep_purple_100cornerRadius">
                <TextView android:ellipsize="end" android:id="@+id/focus_txtTitle"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="Focus"
                    style="@style/txtRobotomedium20"
                    />
                <LinearLayout android:gravity="start"
                    android:id="@+id/focus_linearHourMinuteS"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_22pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/focus_linearHour_minutos"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.47" android:layout_width="0dp" android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end" android:gravity="center"
                            android:id="@+id/focus_btn_minutos"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:paddingBottom="@dimen/_9pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_9pxv"
                            android:singleLine="true"
                            android:text="00"
                            android:textAllCaps="false"
                            style="@style/btnSolidRoundedOutline" />
                        <TextView android:ellipsize="end"
                            android:id="@+id/focus_txtTimelabel_minutos"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_40pxh"
                            android:layout_marginStart="@dimen/_41pxh"
                            android:layout_marginTop="@dimen/_7pxv"
                            android:layout_width="wrap_content"
                            android:letterSpacing="0.02"
                            android:lineSpacingExtra="@dimen/_3pxh"
                            android:singleLine="true"
                            android:text="@string/lbl_minutos"
                            style="@style/txtRobotoregular12" />
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/focus_txtSeparator"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.05"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_10pxh"
                        android:singleLine="true"
                        android:text=":"
                        style="@style/txtRobotoregular57" />
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/focus_linearHour_segundos"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.47" android:layout_width="0dp" android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end" android:gravity="center"
                            android:id="@+id/focus_btn_segundos"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:paddingBottom="@dimen/_9pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_9pxv"
                            android:singleLine="true"
                            android:text="00"
                            android:textAllCaps="false"
                            style="@style/btnSolidRoundedOutline" />

                        <TextView
                            android:id="@+id/focus_txtTimelabel_Segundo"
                            style="@style/txtRobotoregular12"
                            android:layout_width="76dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/_41pxh"
                            android:layout_marginTop="@dimen/_7pxv"
                            android:layout_marginEnd="@dimen/_40pxh"
                            android:ellipsize="end"
                            android:letterSpacing="0.02"
                            android:lineSpacingExtra="@dimen/_3pxh"
                            android:singleLine="true"
                            android:text="@string/lbl_segundos" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/descanso_linearFocuspicker"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_marginBottom="@dimen/_16pxh"
                android:orientation="vertical"
                style="@style/groupStyledeep_purple_100cornerRadius">
                <TextView android:ellipsize="end" android:id="@+id/descanso_txtTitle"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_19pxv"
                    android:layout_width="wrap_content"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="Descanso"
                    style="@style/txtRobotomedium20"
                    />
                <LinearLayout android:gravity="start"
                    android:id="@+id/descanso_linearHourMinuteS"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_22pxv"
                    android:layout_marginEnd="@dimen/_24pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_marginTop="@dimen/_31pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/descanso_linearHour_minutos"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.47" android:layout_width="0dp" android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end" android:gravity="center"
                            android:id="@+id/descanso_btn_minutos"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:paddingBottom="@dimen/_9pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_9pxv"
                            android:singleLine="true"
                            android:text="00"
                            android:textAllCaps="false"
                            style="@style/btnSolidRoundedOutline" />
                        <TextView android:ellipsize="end"
                            android:id="@+id/descanso_txtTimelabel_minutos"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_40pxh"
                            android:layout_marginStart="@dimen/_41pxh"
                            android:layout_marginTop="@dimen/_7pxv"
                            android:layout_width="wrap_content"
                            android:letterSpacing="0.02"
                            android:lineSpacingExtra="@dimen/_3pxh"
                            android:singleLine="true"
                            android:text="@string/lbl_minutos"
                            style="@style/txtRobotoregular12" />
                    </LinearLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/descanso_txtSeparator"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.05"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_10pxh"
                        android:singleLine="true"
                        android:text=":"
                        style="@style/txtRobotoregular57" />
                    <LinearLayout android:gravity="center_horizontal"
                        android:id="@+id/descanso_linearHour_segundos"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_weight="0.47" android:layout_width="0dp" android:orientation="vertical">
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end" android:gravity="center"
                            android:id="@+id/descanso_btn_segundos"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:lineSpacingExtra="@dimen/_8pxh"
                            android:paddingBottom="@dimen/_9pxv"
                            android:paddingEnd="@dimen/_30pxh"
                            android:paddingStart="@dimen/_30pxh"
                            android:paddingTop="@dimen/_9pxv"
                            android:singleLine="true"
                            android:text="00"
                            android:textAllCaps="false"
                            style="@style/btnSolidRoundedOutline" />

                        <TextView
                            android:id="@+id/descanso_txtTimelabel_Segundo"
                            style="@style/txtRobotoregular12"
                            android:layout_width="81dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="@dimen/_41pxh"
                            android:layout_marginTop="@dimen/_7pxv"
                            android:layout_marginEnd="@dimen/_40pxh"
                            android:ellipsize="end"
                            android:letterSpacing="0.02"
                            android:lineSpacingExtra="@dimen/_3pxh"
                            android:singleLine="true"
                            android:text="@string/lbl_segundos"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowarrowleftOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleftOne"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/baseline_arrow_left_24"
                    tools:ignore="ContentDescription" />
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnFour"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:paddingBottom="@dimen/_11pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_11pxv"
                    android:singleLine="true"
                    android:text="4"
                    android:textAllCaps="false"
                    style="@style/btnSolid"/>
                <ImageView android:id="@+id/imageArrowright"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/baseline_arrow_right_24"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtREPETIR"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="Repetir"
                style="@style/txtRobotomedium20"/>

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:backgroundTint="@color/lime_700"
                android:orientation="horizontal"
                android:text="Comenzar"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:icon="@drawable/baseline_play_circle_24"
                app:iconTint="#000000" />



        </LinearLayout>
</layout>
